# silverreed-firmware

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .releaserc.prerelease.yaml  .releaserc.yaml  404.html  CHANGELOG.md  CLAUDE.md  README.md  always_timeout.sh  index.html  mkdocs.yml  platformio.ini  pyproject.toml  run_esp32qemu_wrapper.sh  sitemap.xml
.github/workflows/: .semantic-release.yaml  build.yaml  ci.yaml  dependabot.yaml  test-build.yaml
ayab-silver-reed-shield/: ayab-silver-reed-shield.kicad_pcb  ayab-silver-reed-shield.kicad_pro  ayab-silver-reed-shield.kicad_sch  fp-lib-table  symbols.kicad_sym
ayab-silver-reed-shield/ayab-silver-reed-hardware/: ayab-silver-reed-hardware.kicad_pro  ayab-silver-reed-hardware.kicad_sch  design-block-lib-table  fp-lib-table  sym-lib-table
ayab-silver-reed-shield/ayab-silver-reed-hardware/ESP32_S3_MINI_1_N8/: ESP32.kicad_sym
ayab-silver-reed-shield/ayab-silver-reed-hardware/ESP32_S3_MINI_1_N8.pretty/: XCVR_ESP32-S3-MINI-1-N8.kicad_mod
ayab-silver-reed-shield/ayab-silver-reed-hardware/footprints/: DIN-704-M10.kicad_mod
ayab-silver-reed-shield/footprints/: CP_6.3x11mm_horiz-R.kicad_mod  RELAY_G6DN-1A_OMR.kicad_mod
ayab-silver-reed-shield/footprints/DIN.pretty/: DIN-704-M10.kicad_mod
concepts/ayab-protocol/: index.html
concepts/knitting-machines/: index.html
concepts/purpose/: index.html
docs/: index.md
docs/concepts/: ayab-protocol.md  knitting-machines.md  purpose.md
docs/firmware/: architecture.md
docs/hardware/: pin-mapping.md  shield.md
docs/reference/: references.md
firmware/architecture/: index.html
hardware/: #auto_saved_files#  fp-info-cache  hardware.kicad_prl  hardware.kicad_pro  hardware.kicad_sch  ~hardware.kicad_sch.lck
hardware/pin-mapping/: index.html
hardware/shield/: index.html
lib/silverreed/src/: config.h  config_arduino.h  config_esp32.h  debug.h  knitting.cpp  knitting.h  pattern.cpp  pattern.h  version.h
lib/silverreed/src/communication/: ayab.cpp  ayab.h  com.h
reference/references/: index.html
scripts/: README_QEMU.md  create_flash_image.py  get_version.py  install_qemu_esp32.sh  run_esp32_qemu_test.sh
search/: search_index.json
src/: main.cpp
test/: test_serial.py
test/test_common/: test_common.cpp  test_pattern.cpp  test_pattern.h
test/test_desktop/: README.md  test_toto.cpp
test/test_embedded/: test_ayab.cpp  test_ayab.h  test_carriage.cpp  test_carriage.h  test_integration.cpp  test_integration.h  test_knitting.cpp  test_knitting.h  test_main.cpp  test_pattern.cpp  test_pattern.h  test_version.cpp  test_version.h
(+2 files in other folders)
