[tool.poetry]
name = "silverreed-arduino-firmware"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
platformio = "^6.1.17"
taskipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pyserial = "^3.5"
pytest = "^8.4.2"
sliplib = "^0.7.0"


[tool.taskipy.tasks]
init = "pre-commit install && platformio -c clion init"
build = "platformio run"
debug = "platformio debug"
test = "platformio test"
upload = "platformio run --target upload"
clean = "platformio run --target clean"
lint = "pre-commit run --all-files"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
