[project]
name = "silverreed-arduino-firmware"
version = "0.1.0"
description = "Open-source firmware for Silverreed knitting machines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "platformio>=6.1.17",

]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pre-commit>=4.5.0",
    "pyserial>=3.5",
    "pytest>=8.3.4",
    "sliplib>=0.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.26.0",
    "pymdown-extensions>=10.12",
]

[tool.taskipy.tasks]
init = "pre-commit install && platformio -c clion init"
build = "platformio run"
upload = "platformio run --target upload"
test = "platformio test"
clean = "platformio run --target clean"
lint = "pre-commit run --all-files"
debug = "platformio debug"
monitor = "platformio device monitor"
install-qemu = "bash scripts/install_qemu_esp32.sh"
test-esp32-qemu = "platformio test -e esp32qemu"
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"
docs-deploy = "mkdocs gh-deploy"
